--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
